--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   intl: any
   shared_preferences: ^2.2.1
+  lottie: ^2.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,9 +60,6 @@ flutter:
   fonts:
     - family: Baloo2
       fonts:
-#        - asset: assets/fonts/Baloo2-Regular.ttf
-#        - asset: assets/fonts/Baloo2-Bold.ttf
-#          weight: 700
         - asset: assets/fonts/Baloo2-ExtraBold.ttf
           weight: 900
   # The following line ensures that the Material Icons font is
@@ -73,6 +71,7 @@ flutter:
     - assets/
     - assets/image/
     - assets/box/
+    - assets/lottie/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
