--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: any
   shared_preferences: ^2.2.1
   lottie: ^2.7.0
+  decimal: ^2.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
