--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+# flutter build appbundle --release --build-name=1.0.1 --build-number=2
+
 environment:
   sdk: '>=3.1.3 <4.0.0'
 
