--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.1
   lottie: ^2.7.0
   decimal: ^2.3.3
+  sqflite: ^2.2.8+4 # 数据库
 
 
   # The following adds the Cupertino Icons font to your application.
