--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.icon_tile_game"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
+//    compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -56,7 +57,7 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             //使用签名文件
-             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug
             //混淆
             minifyEnabled true
             //去除无用res文件
